# nitro-sense-linux

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
packaging/: 99-nitro-sense.rules  com.nitrosenselinux.helper.policy  install-trueharmony.sh  install-udev.sh  nitro-sense-helper  nitro-sense-linux.desktop  nitro-trueharmony.conf
packaging/kbd-module/: Makefile
packaging/kbd-module/src/: nitro_kbd.c
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  sysfs.rs
src-tauri/src/commands/: audio.rs  autostart.rs  battery.rs  fans.rs  gpu.rs  mod.rs  profile.rs  sensors.rs  system.rs
src/components/: BatteryPanel.tsx  FanControl.tsx  FanGauge.tsx  GpuPanel.tsx  Monitoring.tsx  PowerPlan.tsx  TopBar.tsx  Unsupported.tsx
src/lib/: api.ts  settings.tsx
