[package]
name = "nitro-sense-linux"
version = "0.1.0"
description = "NitroSense replacement for Linux — Acer Nitro AN515-58"
authors = ["Ricardo"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "nitro_sense_linux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
once_cell = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
